--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,8 @@
 <html>
     <head></head>
     <body>
-        <div id="app"></div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.min.js"></script>
-
         <!-- build:js -->
-        <script src="js/App.js"></script>
+        <script src="js/main.js"></script>
         <!-- endbuild -->
     </body>
 </html>
